# textcase

./: .gitignore  NOTICE  README.md  pyproject.toml  sample_heading_structure.md  test_heading_formats.md
doc/: cmd_create.md
example_project/.textcase/: config.yml
example_project/requirements/: REQ001.md
example_project/requirements/.textcase/: order.yml
example_project/requirements/.textcase/tags/: important.tag
examples/: api_server_example.py  migrate_markdown_example.py  module_example.py  task_test_example.py  uri_resource_example.py
reqs/: .textcase.yml  REQ001.md  REQ002.md  REQ003.md  REQ004.md  REQ005.md  REQ006.md  REQ007.md  REQ008.md  REQ009.md  REQ010.md  REQ011.md  REQ012.md  REQ013.md  REQ014.md  REQ015.md  REQ016.md  REQ017.md  REQ018.md  REQ019.md  REQ020.md
reqs/.config/agent/: demo.md
reqs/.config/provider/: xty.yml
reqs/.config/template/: prompt.md.j2
reqs/chat/: .textcase.yml  CHAT001.msg.md  CHAT002.msg.md
reqs/impl/: .textcase.yml  IMP001.md  IMP002.md
reqs/tests/: .textcase.yml  TST001.md
reqs/tests_bdd/: .textcase.yml
scripts/: analyze_markdown.py  inspect_markdown_headings.py  path_query_example.py  regex_test.py
src/data/templates/: agent.md.j2  provider.yml  provider.yml.j2
src/textcase/: __init__.py  __main__.py  cli.py
src/textcase.orig/: __init__.py
src/textcase.orig/cli/commands/: ask.py  clear.py  create.py  edit_conf.py  link.py  list.py  list_item.py  message.py
src/textcase.orig/core/: __init__.py  markdown_item.py  module_config.py  module_item.py  module_item_order.py  project_config.py  project_factory.py  task.py  test.py  vfs.py  vfs_localfs.py
src/textcase.orig/core/llm/: __init__.py  conversation_settings.py  message_file.py
src/textcase.orig/parse/: __init__.py  document.py  resolver.py
src/textcase.orig/protocol/: __init__.py
src/textcase.orig/protocol/archive/: base.py  document.py  message.py  vfs.py
src/textcase.orig/protocol/llm/: __init__.py  llm.py  message.py
src/textcase.orig/protocol/resource/: __init__.py  base.py  document.py  module.py
src/textcase/cli/: __init__.py  utils.py
src/textcase/cli/commands/: add.py  add_conf.py  archive.py  ask.py  clear.py  create.py  edit.py  link.py  list.py  list_conf.py  list_item.py  list_module.py  tag.py  unlink.py
src/textcase/cli/utils/: __init__.py  template_utils.py
src/textcase/core/: __init__.py  api.py  case_item.py  config.py  document_item.py  localfs.py  logging.py  markdown_ast.py  markdown_item.py  migrate_markdown.py  module.py  module_config.py  module_item.py  module_item_order.py  module_tag.py  order.py  project.py  project_config.py  resource.py  tags.py  uri.py  vfs_localfs.py
src/textcase/core/llm/: __init__.py  agent.py  conversation_settings.py  factory.py  humbug_provider.py  message_file.py  provider.py
src/textcase/data/templates/: prompt.md
src/textcase/parse/: __init__.py  document.py  document_type.py  parser.py  resolver.py  resolver_md.py  resolver_md_node.py  resolver_py.py
src/textcase/protocol/: __init__.py  agent.py  api.py  base.py  document.py  message.py  module.py  source.py  task.py  vfs.py  vfs_protocol.py
src/textcase/protocol/archive/: llm.py  module.py  resource.py  (+2 more)
tests/: test_markdown_node_builder.py  test_markdown_resolver.py
(+10 files in other folders)
